# benzene_lang

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  compile_flags.txt  test.bat  test.sh
.github/workflows/: ci.yml
cli/: CMakeLists.txt
cli/src/: cmd.cpp  cmd.hpp  files.hpp  main.cpp
core/: CMakeLists.txt
core/src/diagnostics/: diagnostic_eng.cpp
core/src/import_res/: import_res.cpp
core/src/lexer/: lexer.cpp  lexer_diag.cpp
core/src/module/: module.cpp
core/src/nodes/: node_expr.cpp
core/src/parser/: parsers.cpp
core/src/symbols/: symtable.cpp
docs/: grammar.md
lib/: logger.hpp  utils.hpp
mcp/: CMakeLists.txt
mcp/include/mcp_tools/: construct.hpp  gen_case.hpp  gen_comment.hpp  gen_const.hpp  gen_function.hpp  gen_let.hpp
mcp/src/mcp_tools/: gen_case.cpp  gen_comment.cpp  gen_const.cpp  gen_function.cpp  gen_let.cpp
src/: main.cpp
src/ast/: expr_l.hpp  node_val_t.hpp
src/ast/err_res/: err_res.cpp  err_res.hpp
src/ast/print/: print.cpp  print.hpp
src/ast/sym_res/: sym_res.cpp  (+1 more)
src/cmd/: cmd.hpp
src/diagnostics/: diagnostic.hpp  diagnostic_eng.cpp  diagnostic_eng.hpp
src/import_res/: import_res.hpp
src/lexer/: lex.cpp  lex.hpp  lexer.cpp  lexer.hpp  lexer_diag.cpp  lexer_diag.hpp
src/module/: module.cpp  module.hpp
src/nodes/: node.hpp  node_expr.cpp  node_expr.hpp  node_visitor.hpp
src/parser/: parser.cpp  parser.hpp  parser_types.hpp  parsers.cpp  parsers.hpp
src/scopes/: env.hpp  params.hpp
src/symbols/: scopes.hpp  symbol_types.hpp  symtable.cpp  symtable.hpp
src/syntax/: symbols.hpp  syntax.hpp
src/tables/: keyword_table.hpp  literal_table.hpp  operator_table.hpp  utils.hpp
src/tokenizer/: tok.cpp  tok.hpp  token_types.hpp  tokenizer.cpp  tokenizer.hpp
src/tokens/: token_types.hpp
src/types/: symbols_t.hpp  syntax_t.hpp  types_t.hpp  utils.hpp
src/typing/: types.hpp
tests/: CMakeLists.txt
tests/fixtures/: fixtures.hpp
tests/frontend/: demo.bz
tests/integration/: test_module_pipeline.cpp
tests/integration/samples/: duplicate_const.bz  let_at_top_level.bz  pipe_chain.bz  valid_program.bz
tests/unit/: test_diagnostic_engine.cpp  test_import_res.cpp  test_lexer.cpp  test_parser.cpp  test_sym_resolver.cpp  test_symbol_table.cpp  test_tables.cpp
(+50 files in other folders)
